--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.0
+  firebase_auth: ^1.0.1
   firebase_messaging: ^12.0.1
   firebase_storage: ^10.3.3
   cloud_firestore: ^3.4.0
+  google_sign_in: ^5.0.1
+
 
 dev_dependencies:
   flutter_test:
