--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.0
-  firebase_auth: ^1.0.1
-  firebase_messaging: ^12.0.1
+  firebase_auth: ^3.9.0
+  firebase_messaging: ^13.0.2
   firebase_storage: ^10.3.3
   cloud_firestore: ^3.4.0
   google_sign_in: ^5.0.1
+  paginated_search_bar: ^1.1.2
+
 
 
 dev_dependencies:
