--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   google_sign_in: ^5.0.1
   bubble: ^1.2.1
   paginated_search_bar: ^1.1.2
+  file_picker: ^5.2.0+1
+  flutter_chat_ui: ^1.6.4
+  flutter_chat_types: ^3.4.5
+  image_picker: ^0.8.5+3
+  open_file: ^2.1.1
+  mime: ^1.0.2
+  path_provider: ^2.0.11
+  uuid: ^3.0.6
  
 dev_dependencies:
   flutter_test:
