--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   mime: ^1.0.2
   path_provider: ^2.0.11
   uuid: ^3.0.6
+  dash_chat_2: ^0.0.14
+  calendar_view: ^1.0.0
  
 dev_dependencies:
   flutter_test:
